--- a/ComputingChallenge2024-25_4001.ipynb
+++ b/ComputingChallenge2024-25_4001.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "## Tip\n",
     "\n",
-    "- To calculate the variation in energy between an attempted configuration and the current one, you do not need to calculate the energy of the whole system, but only that part affected by the change of the particle you are trying to move. Implementing this step in the right way can speed up your algorithms by a factor of > 1000."
+    "- To calculate the variation in energy between an attempted configuration and the current one, you do not need to calculate the energy of the whole system, but only that part affected by the change of the particle you are trying to move. Implementing this step in the right way can speed up your algorithms by a factor of > 1000.\n"
    ]
   },
   {
