--- a/ComputingChallenge2024-25_4001.ipynb
+++ b/ComputingChallenge2024-25_4001.ipynb
@@ -8,13 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,11 +34,11 @@
     "\n",
     "Furthermore, each particle interact with each other particle in the system (both those belonging to the same polymer or to other polymers) with the following energy function:\n",
     "\n",
-    "2) $E_{int}(ij) = C_{int} \\cos( \\pi / 2 \\, d_{ij} / R )$ for $d_{ij} < R$, $0$ if $d_{ij} \\le R$ \n",
+    "2) $E_{int}(ij) = C_{int} \\cos( {\\pi \\over 2 }\\, d_{ij} / R )$ for $d_{ij} < R$, $0$ if $d_{ij} \\le R$ \n",
     "\n",
     "Each particle also interact with the grafting surface via the following potential:\n",
     "\n",
-    "3) $E_{surf}(i) = 10^9 for $d_{i} \\lt 0$ and $0$ if $d_{i} > 0$, where $d_i$ is the $z$ coordinate of the particle, and the surface is supposed to be the plane $z=0$\n",
+    "3) $E_{surf}(i) = 10^9$ for $d_{i} \\lt 0$ and $0$ if $d_{i} > 0$, where $d_i$ is the $z$ coordinate of the particle, and the surface is supposed to be the plane $z=0$\n",
     "\n",
     "The total energy of the system is given by:\n",
     "\n",
@@ -79,7 +72,7 @@
     "\n",
     "## Tip\n",
     "\n",
-    "- To calculate the variation in energy between an attempted configuration and the current one, you do not need to calculate the energy of the whole system, but only that part affected by the change of the particle you are trying to move. Implementing this step in the right way can speed up your algorithms by a factor of > 1000.\n"
+    "- To calculate the variation in energy between an attempted configuration and the current one, you do not need to calculate the energy of the whole system, but only that part affected by the change of the particle you are trying to move. Implementing this step in the right way can speed up your algorithms by a factor of > 1000."
    ]
   },
   {
@@ -217,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -231,9 +224,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
