--- a/ComputingChallenge2024-25_4001.ipynb
+++ b/ComputingChallenge2024-25_4001.ipynb
@@ -36,6 +36,9 @@
     "\n",
     "2) $E_{int}(ij) = C_{int} \\cos( {\\pi \\over 2 }\\, d_{ij} / R )$ for $d_{ij} < R$, $0$ if $d_{ij} \\le R$ \n",
     "\n",
+    "***for the interaction between two particles, regardless of whether or not they are bound, the energy should be 0 for d_ij >= R (distance greater than or equal to\n",
+    " R, currently there is conflicting info***\n",
+    "\n",
     "Each particle also interact with the grafting surface via the following potential:\n",
     "\n",
     "3) $E_{surf}(i) = 10^9$ for $d_{i} \\lt 0$ and $0$ if $d_{i} > 0$, where $d_i$ is the $z$ coordinate of the particle, and the surface is supposed to be the plane $z=0$\n",
