--- a/ComputingChallenge2024-25_4001.ipynb
+++ b/ComputingChallenge2024-25_4001.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "Furthermore, each particle interact with each other particle in the system (both those belonging to the same polymer or to other polymers) with the following energy function:\n",
     "\n",
-    "2) $E_{int}(ij) = C_{int} \\cos( {\\pi \\over 2 }\\, d_{ij} / R )$ for $d_{ij} < R$, $0$ if $d_{ij} \\le R$ \n",
+    "2) $E_{int}(ij) = C_{int} \\cos( {\\pi \\over 2 }\\, d_{ij} / R )$ for $d_{ij} < R$\n",
     "\n",
     "***for the interaction between two particles, regardless of whether or not they are bound, the energy should be 0 for d_ij >= R (distance greater than or equal to\n",
     " R, currently there is conflicting info***\n",
